--- a/Coding_Practice/Coding_Practice.vcxproj.filters
+++ b/Coding_Practice/Coding_Practice.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Chapter1Question2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Chapter1Question3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Chapter1Question1.cpp">
@@ -30,6 +33,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Chapter1Question2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Chapter1Question3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
