--- a/Coding_Practice/Coding_Practice.vcxproj
+++ b/Coding_Practice/Coding_Practice.vcxproj
@@ -68,12 +68,14 @@
     <ClInclude Include="Chapter1Question2.h" />
     <ClInclude Include="Chapter1Question3.h" />
     <ClInclude Include="Chapter1Question4.h" />
+    <ClInclude Include="Chapter1Question5.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Chapter1Question1.cpp" />
     <ClCompile Include="Chapter1Question2.cpp" />
     <ClCompile Include="Chapter1Question3.cpp" />
     <ClCompile Include="Chapter1Question4.cpp" />
+    <ClCompile Include="Chapter1Question5.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
