--- a/Coding_Practice/Coding_Practice.vcxproj
+++ b/Coding_Practice/Coding_Practice.vcxproj
@@ -69,6 +69,7 @@
     <ClInclude Include="Chapter1Question3.h" />
     <ClInclude Include="Chapter1Question4.h" />
     <ClInclude Include="Chapter1Question5.h" />
+    <ClInclude Include="Chapter1Question6.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Chapter1Question1.cpp" />
@@ -76,6 +77,7 @@
     <ClCompile Include="Chapter1Question3.cpp" />
     <ClCompile Include="Chapter1Question4.cpp" />
     <ClCompile Include="Chapter1Question5.cpp" />
+    <ClCompile Include="Chapter1Question6.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
