--- a/Coding_Practice/Coding_Practice.vcxproj.filters
+++ b/Coding_Practice/Coding_Practice.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Chapter1Question6.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Chapter1Question7.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Chapter1Question1.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Chapter1Question6.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Chapter1Question7.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
