--- a/Coding_Practice/Coding_Practice.vcxproj.filters
+++ b/Coding_Practice/Coding_Practice.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Chapter1Question7.h">
       <Filter>Header Files\Chapter1</Filter>
     </ClInclude>
+    <ClInclude Include="ClassTemplete.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
