refactor whole project by rebuilding the folder structure

--- a/Coding_Practice/Coding_Practice.vcxproj
+++ b/Coding_Practice/Coding_Practice.vcxproj
@@ -64,24 +64,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Chapter1Question1.h" />
-    <ClInclude Include="Chapter1Question2.h" />
-    <ClInclude Include="Chapter1Question3.h" />
-    <ClInclude Include="Chapter1Question4.h" />
-    <ClInclude Include="Chapter1Question5.h" />
-    <ClInclude Include="Chapter1Question6.h" />
-    <ClInclude Include="Chapter1Question7.h" />
-    <ClInclude Include="ClassTemplete.h" />
+    <ClInclude Include="src\Chapter1\Chapter1Question1.h" />
+    <ClInclude Include="src\Chapter1\Chapter1Question2.h" />
+    <ClInclude Include="src\Chapter1\Chapter1Question3.h" />
+    <ClInclude Include="src\Chapter1\Chapter1Question4.h" />
+    <ClInclude Include="src\Chapter1\Chapter1Question5.h" />
+    <ClInclude Include="src\Chapter1\Chapter1Question6.h" />
+    <ClInclude Include="src\Chapter1\Chapter1Question7.h" />
+    <ClInclude Include="src\ClassTemplete.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Chapter1Question1.cpp" />
-    <ClCompile Include="Chapter1Question2.cpp" />
-    <ClCompile Include="Chapter1Question3.cpp" />
-    <ClCompile Include="Chapter1Question4.cpp" />
-    <ClCompile Include="Chapter1Question5.cpp" />
-    <ClCompile Include="Chapter1Question6.cpp" />
-    <ClCompile Include="Chapter1Question7.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\Chapter1\Chapter1Question1.cpp" />
+    <ClCompile Include="src\Chapter1\Chapter1Question2.cpp" />
+    <ClCompile Include="src\Chapter1\Chapter1Question3.cpp" />
+    <ClCompile Include="src\Chapter1\Chapter1Question4.cpp" />
+    <ClCompile Include="src\Chapter1\Chapter1Question5.cpp" />
+    <ClCompile Include="src\Chapter1\Chapter1Question6.cpp" />
+    <ClCompile Include="src\Chapter1\Chapter1Question7.cpp" />
+    <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
