--- a/Coding_Practice/Coding_Practice.vcxproj.filters
+++ b/Coding_Practice/Coding_Practice.vcxproj.filters
@@ -21,54 +21,54 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Chapter1\Chapter1Question1.h">
+    <ClInclude Include="src\Chapter1\chapter1_question1.h">
       <Filter>Header Files\Chapter1</Filter>
     </ClInclude>
-    <ClInclude Include="src\Chapter1\Chapter1Question2.h">
+    <ClInclude Include="src\Chapter1\chapter1_question2.h">
       <Filter>Header Files\Chapter1</Filter>
     </ClInclude>
-    <ClInclude Include="src\Chapter1\Chapter1Question3.h">
+    <ClInclude Include="src\Chapter1\chapter1_question3.h">
       <Filter>Header Files\Chapter1</Filter>
     </ClInclude>
-    <ClInclude Include="src\Chapter1\Chapter1Question4.h">
+    <ClInclude Include="src\Chapter1\chapter1_question4.h">
       <Filter>Header Files\Chapter1</Filter>
     </ClInclude>
-    <ClInclude Include="src\Chapter1\Chapter1Question5.h">
+    <ClInclude Include="src\Chapter1\chapter1_question5.h">
       <Filter>Header Files\Chapter1</Filter>
     </ClInclude>
-    <ClInclude Include="src\Chapter1\Chapter1Question6.h">
+    <ClInclude Include="src\Chapter1\chapter1_question6.h">
       <Filter>Header Files\Chapter1</Filter>
     </ClInclude>
-    <ClInclude Include="src\Chapter1\Chapter1Question7.h">
+    <ClInclude Include="src\Chapter1\chapter1_question7.h">
       <Filter>Header Files\Chapter1</Filter>
     </ClInclude>
-    <ClInclude Include="src\ClassTemplete.h">
+    <ClInclude Include="src\class_templete.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Chapter1\Chapter1Question1.cpp">
+    <ClCompile Include="src\Chapter1\chapter1_question1.cpp">
       <Filter>Source Files\Chapter1</Filter>
     </ClCompile>
-    <ClCompile Include="src\Chapter1\Chapter1Question2.cpp">
+    <ClCompile Include="src\Chapter1\chapter1_question2.cpp">
       <Filter>Source Files\Chapter1</Filter>
     </ClCompile>
-    <ClCompile Include="src\Chapter1\Chapter1Question3.cpp">
+    <ClCompile Include="src\Chapter1\chapter1_question3.cpp">
       <Filter>Source Files\Chapter1</Filter>
     </ClCompile>
-    <ClCompile Include="src\Chapter1\Chapter1Question4.cpp">
+    <ClCompile Include="src\Chapter1\chapter1_question4.cpp">
       <Filter>Source Files\Chapter1</Filter>
     </ClCompile>
-    <ClCompile Include="src\Chapter1\Chapter1Question5.cpp">
+    <ClCompile Include="src\Chapter1\chapter1_question5.cpp">
       <Filter>Source Files\Chapter1</Filter>
     </ClCompile>
-    <ClCompile Include="src\Chapter1\Chapter1Question6.cpp">
-      <Filter>Source Files\Chapter1</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Chapter1\Chapter1Question7.cpp">
+    <ClCompile Include="src\Chapter1\chapter1_question6.cpp">
       <Filter>Source Files\Chapter1</Filter>
     </ClCompile>
     <ClCompile Include="src\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Chapter1\chapter1_question7.cpp">
       <Filter>Source Files\Chapter1</Filter>
     </ClCompile>
   </ItemGroup>
