add Chapter1 files to makefile and add make clean

--- a/Coding_Practice/src/makefile
+++ b/Coding_Practice/src/makefile
@@ -1,2 +1,8 @@
+SRCS=$(wildcard Chapter1/*.cpp)
+
 all:
-	g++ main.cpp class_template.cpp
+	g++ -o main main.cpp class_template.cpp $(SRCS)
+
+clean:
+	rm main
+
