--- a/Coding_Practice/Coding_Practice.vcxproj
+++ b/Coding_Practice/Coding_Practice.vcxproj
@@ -71,6 +71,8 @@
     <ClInclude Include="src\Chapter1\chapter1_question5.h" />
     <ClInclude Include="src\Chapter1\chapter1_question6.h" />
     <ClInclude Include="src\Chapter1\chapter1_question7.h" />
+    <ClInclude Include="src\Chapter2\chapter2_question1.h" />
+    <ClInclude Include="src\Chapter2\node.h" />
     <ClInclude Include="src\class_template.h" />
   </ItemGroup>
   <ItemGroup>
@@ -81,6 +83,8 @@
     <ClCompile Include="src\Chapter1\chapter1_question5.cpp" />
     <ClCompile Include="src\Chapter1\chapter1_question6.cpp" />
     <ClCompile Include="src\Chapter1\chapter1_question7.cpp" />
+    <ClCompile Include="src\Chapter2\chapter2_question1.cpp" />
+    <ClCompile Include="src\Chapter2\node.cpp" />
     <ClCompile Include="src\class_template.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
