--- a/Coding_Practice/Coding_Practice.vcxproj
+++ b/Coding_Practice/Coding_Practice.vcxproj
@@ -72,6 +72,7 @@
     <ClInclude Include="src\Chapter1\chapter1_question6.h" />
     <ClInclude Include="src\Chapter1\chapter1_question7.h" />
     <ClInclude Include="src\Chapter2\chapter2_question1.h" />
+    <ClInclude Include="src\Chapter2\chapter2_question2.h" />
     <ClInclude Include="src\Chapter2\node.h" />
     <ClInclude Include="src\class_template.h" />
   </ItemGroup>
@@ -84,6 +85,7 @@
     <ClCompile Include="src\Chapter1\chapter1_question6.cpp" />
     <ClCompile Include="src\Chapter1\chapter1_question7.cpp" />
     <ClCompile Include="src\Chapter2\chapter2_question1.cpp" />
+    <ClCompile Include="src\Chapter2\chapter2_question2.cpp" />
     <ClCompile Include="src\Chapter2\node.cpp" />
     <ClCompile Include="src\class_template.cpp" />
     <ClCompile Include="src\main.cpp" />
