--- a/Coding_Practice/Coding_Practice.vcxproj.filters
+++ b/Coding_Practice/Coding_Practice.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="src\Chapter2\chapter2_question2.h">
       <Filter>Header Files\Chapter2</Filter>
     </ClInclude>
+    <ClInclude Include="src\Chapter2\chapter2_question3.h">
+      <Filter>Header Files\Chapter2</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Chapter1\chapter1_question1.cpp">
@@ -96,6 +99,9 @@
       <Filter>Source Files\Chapter2</Filter>
     </ClCompile>
     <ClCompile Include="src\Chapter2\chapter2_question2.cpp">
+      <Filter>Source Files\Chapter2</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Chapter2\chapter2_question3.cpp">
       <Filter>Source Files\Chapter2</Filter>
     </ClCompile>
   </ItemGroup>
