--- a/Coding_Practice/Coding_Practice.vcxproj
+++ b/Coding_Practice/Coding_Practice.vcxproj
@@ -74,6 +74,7 @@
     <ClInclude Include="src\Chapter2\chapter2_question1.h" />
     <ClInclude Include="src\Chapter2\chapter2_question2.h" />
     <ClInclude Include="src\Chapter2\chapter2_question3.h" />
+    <ClInclude Include="src\Chapter2\chapter2_question4.h" />
     <ClInclude Include="src\Chapter2\node.h" />
     <ClInclude Include="src\class_template.h" />
   </ItemGroup>
@@ -88,6 +89,7 @@
     <ClCompile Include="src\Chapter2\chapter2_question1.cpp" />
     <ClCompile Include="src\Chapter2\chapter2_question2.cpp" />
     <ClCompile Include="src\Chapter2\chapter2_question3.cpp" />
+    <ClCompile Include="src\Chapter2\chapter2_question4.cpp" />
     <ClCompile Include="src\Chapter2\node.cpp" />
     <ClCompile Include="src\class_template.cpp" />
     <ClCompile Include="src\main.cpp" />
