--- a/Coding_Practice/Coding_Practice.vcxproj
+++ b/Coding_Practice/Coding_Practice.vcxproj
@@ -75,6 +75,7 @@
     <ClInclude Include="src\Chapter2\chapter2_question2.h" />
     <ClInclude Include="src\Chapter2\chapter2_question3.h" />
     <ClInclude Include="src\Chapter2\chapter2_question4.h" />
+    <ClInclude Include="src\Chapter2\chapter2_question5.h" />
     <ClInclude Include="src\Chapter2\node.h" />
     <ClInclude Include="src\class_template.h" />
   </ItemGroup>
@@ -90,6 +91,7 @@
     <ClCompile Include="src\Chapter2\chapter2_question2.cpp" />
     <ClCompile Include="src\Chapter2\chapter2_question3.cpp" />
     <ClCompile Include="src\Chapter2\chapter2_question4.cpp" />
+    <ClCompile Include="src\Chapter2\chapter2_question5.cpp" />
     <ClCompile Include="src\Chapter2\node.cpp" />
     <ClCompile Include="src\class_template.cpp" />
     <ClCompile Include="src\main.cpp" />
