--- a/Coding_Practice/Coding_Practice.vcxproj.filters
+++ b/Coding_Practice/Coding_Practice.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="src\Chapter2\chapter2_question4.h">
       <Filter>Header Files\Chapter2</Filter>
     </ClInclude>
+    <ClInclude Include="src\Chapter2\chapter2_question5.h">
+      <Filter>Header Files\Chapter2</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Chapter1\chapter1_question1.cpp">
@@ -108,6 +111,9 @@
       <Filter>Source Files\Chapter2</Filter>
     </ClCompile>
     <ClCompile Include="src\Chapter2\chapter2_question4.cpp">
+      <Filter>Source Files\Chapter2</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Chapter2\chapter2_question5.cpp">
       <Filter>Source Files\Chapter2</Filter>
     </ClCompile>
   </ItemGroup>
