--- a/Coding_Practice/Coding_Practice.vcxproj
+++ b/Coding_Practice/Coding_Practice.vcxproj
@@ -76,6 +76,8 @@
     <ClInclude Include="src\Chapter2\chapter2_question3.h" />
     <ClInclude Include="src\Chapter2\chapter2_question4.h" />
     <ClInclude Include="src\Chapter2\chapter2_question5.h" />
+    <ClInclude Include="src\Chapter2\chapter2_question6.h" />
+    <ClInclude Include="src\Chapter2\chapter2_question7.h" />
     <ClInclude Include="src\Chapter2\node.h" />
     <ClInclude Include="src\class_template.h" />
   </ItemGroup>
@@ -92,6 +94,8 @@
     <ClCompile Include="src\Chapter2\chapter2_question3.cpp" />
     <ClCompile Include="src\Chapter2\chapter2_question4.cpp" />
     <ClCompile Include="src\Chapter2\chapter2_question5.cpp" />
+    <ClCompile Include="src\Chapter2\chapter2_question6.cpp" />
+    <ClCompile Include="src\Chapter2\chapter2_question7.cpp" />
     <ClCompile Include="src\class_template.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
