--- a/Coding_Practice/Coding_Practice.vcxproj.filters
+++ b/Coding_Practice/Coding_Practice.vcxproj.filters
@@ -69,6 +69,12 @@
     <ClInclude Include="src\Chapter2\chapter2_question5.h">
       <Filter>Header Files\Chapter2</Filter>
     </ClInclude>
+    <ClInclude Include="src\Chapter2\chapter2_question6.h">
+      <Filter>Header Files\Chapter2</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Chapter2\chapter2_question7.h">
+      <Filter>Header Files\Chapter2</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Chapter1\chapter1_question1.cpp">
@@ -111,6 +117,12 @@
       <Filter>Source Files\Chapter2</Filter>
     </ClCompile>
     <ClCompile Include="src\Chapter2\chapter2_question5.cpp">
+      <Filter>Source Files\Chapter2</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Chapter2\chapter2_question6.cpp">
+      <Filter>Source Files\Chapter2</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Chapter2\chapter2_question7.cpp">
       <Filter>Source Files\Chapter2</Filter>
     </ClCompile>
   </ItemGroup>
